--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header section starts -->
     <header>
         <!-- Nav menu area starts -->
-      <nav class="navbar navbar-expand-lg shadow py-3 bg-white overflow-hidden ">
+      <nav class="navbar  navbar-expand-lg shadow py-3 bg-white ">
         <div class="container">
           <a class="navbar-brand h1 fw-bold " href="#">Creative Tech</a>            
           <button
@@ -65,33 +65,37 @@
       <!-- Nav menu area ends -->
 
       <!-- Headere slider starts  -->
-    <section class="container" id="slider">
+    <section class="container overflow-hidden" id="slider">
       <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
-          <div class="carousel-inner position-relative">
-            <div class="carousel-item active"  data-bs-interval="10000">
-              <img src="images/cover/cover-1.png" class="d-block w-100 h-100" alt="...">
-              <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+          <div class="carousel-inner ">
+            <div class="overlay"></div>
+            <div class="carousel-item position-relative active"  data-bs-interval="10000">
+              <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
+              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
+                <h1 class="fw-semibold" style="font-size: 3.5vw;" >Get Started Digital Learning</h1>
+                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
+                <div class="btn btn-info text-white">Get Started</div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="images/cover/cover-2.png" class="d-block w-100 h-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-item position-relative" data-bs-interval="2000">
+              <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
+                <h1 class="h1 fw-semibold" style="font-size: 3.5vw;">Discover Our Latest Courses</h1>
+                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
+                <div class="btn btn-info text-white" style="font-size: 1.5vw;">Get Started</div>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="images/cover/cover-3.png" class="d-block w-100 h-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+            <div class="carousel-item position-relative" data-bs-interval="3000">
+              <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
+                <h1 class="h1 fw-semibold " style="font-size: 3.5vw; ">Learn From The Root</h1>
+                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
+                <div class="btn btn-info text-white">Get Started</div>
               </div>
             </div>
           </div>
