course section added

--- a/index.html
+++ b/index.html
@@ -112,6 +112,112 @@
       <!-- Headere slider ends  -->
     </header>
     <!-- Header section ends -->
+    <main>
+      <!-- Course sections starts -->
+      <section class="container" style="margin: 6% auto; ">
+        <div class="text-center" style="margin-bottom: 5%;">
+          <h2 class="h2" >Discover Our Popular Courses</h2>
+          <p class="text-black">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>              
+        </div>
+        <div class="row mt-3 h-100">
+          <div class=" col-auto col-md-12 col-lg-6">
+            <!-- course card 1 -->
+            <div class="card mb-3">
+              <div class="row m-auto g-0">
+                <div class=" col-auto col-sm-4">
+                  <img src="images/course/course-1.png" class="img-fluid rounded-start w" alt="...">
+                </div>
+                <div class=" col-12 col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- course card 2 -->
+            <div class="card mb-3 bg-light">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div> 
+            </div>
+            <!-- course card 3 -->
+            <div class="card mb-3 bg-light">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+           </div>
+          </div>
+          <!-- course card 4 -->
+          <div class="col-md-12 d-none d-lg-block col-lg-6">
+            <div class="card mb-3 bg-light">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- course card 5 -->
+            <div class="card mb-3 bg-light">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- course card 6 -->
+            <div class="card mb-3 bg-light">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-sm-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+           </div>
+          </div>  
+        </div>  
+      </section>
+      <!-- Course sections ends -->
+    </main>
 
     <!-- Bootstrap javascript cdn link -->
     <script
