--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
     <!-- Header section starts -->
     <header>
-        <!-- Nav menu area starts -->
-      <nav class="navbar  navbar-expand-lg shadow py-3 bg-white ">
+      <!-- Nav menu area starts -->
+      <nav class="navbar navbar-expand-lg shadow py-3 bg-white">
         <div class="container">
-          <a class="navbar-brand h1 fw-bold " href="#">Creative Tech</a>            
+          <a class="navbar-brand h1 fw-bold" href="#">Creative Tech</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,9 +35,12 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse d-xl-flex justify-content-lg-center" id="navbarNav">
+          <div
+            class="collapse navbar-collapse d-xl-flex justify-content-lg-center"
+            id="navbarNav"
+          >
             <!-- Nav menu items start -->
-            <ul class="navbar-nav ">
+            <ul class="navbar-nav">
               <li class="nav-item me-2">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -45,93 +48,145 @@
                 <a class="nav-link" href="#">Courses</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link " href="#">Deals</a>
+                <a class="nav-link" href="#">Deals</a>
               </li>
               <li class="nav-item me-2">
                 <a class="nav-link" href="#">Success</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link " href="#">About</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link " href="#">Register</a>
+                <a class="nav-link" href="#">Register</a>
               </li>
             </ul>
             <!-- Nav menu items end -->
           </div>
-          <button type="button" class="btn btn-outline-info d-none d-lg-block">Register</button>
+          <button
+            type="button"
+            class="btn btn-outline-info d-none d-lg-block fw-semibold border-1"
+          >
+            Register
+          </button>
         </div>
       </nav>
       <!-- Nav menu area ends -->
 
       <!-- Headere slider starts  -->
-    <section class="container overflow-hidden" id="slider">
-      <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <section class="container overflow-hidden" id="slider">
+        <div
+          id="carouselExampleDark"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators d-none d-md-block text-center">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
           </div>
-          <div class="carousel-inner ">
-            <div class="overlay"></div>
-            <div class="carousel-item position-relative active"  data-bs-interval="10000">
-              <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
-              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
-                <h1 class="fw-semibold" style="font-size: 3.5vw;" >Get Started Digital Learning</h1>
-                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
-                <div class="btn btn-info text-white">Get Started</div>
+          <div class="carousel-inner">
+            <div  class="carousel-item position-relative active"data-bs-interval="2000">
+              <img src="images/cover/cover-1.png"class="d-block w-100 overlay" alt="..."/>
+              <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+                <h1 class="h1 fw-semibold">Get Started Digital Learning</h1>
+                <p>Some representative placeholder content for the first slide.</p>
+                <div class="btn btn-primary py-2 px-4 text-white fw-semibold">Get Started</div>
               </div>
             </div>
             <div class="carousel-item position-relative" data-bs-interval="2000">
-              <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
-                <h1 class="h1 fw-semibold" style="font-size: 3.5vw;">Discover Our Latest Courses</h1>
-                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
-                <div class="btn btn-info text-white" style="font-size: 1.5vw;">Get Started</div>
+              <img src="images/cover/cover-2.png"class="d-block w-100 overlay"alt="..."/>
+              <div class="carousel-caption position-absolute top-50 start-50 translate-middle" >
+                <div> 
+                  <h1 class="h1 fw-semibold">Discover Our Latest Courses</h1>
+                  <p>Some representative placeholder content for the first slide.</p>
+                  <div class="btn btn-primary py-2 px-4 text-white fw-semibold">Get Started</div>
+                </div>
               </div>
             </div>
-            <div class="carousel-item position-relative" data-bs-interval="3000">
-              <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption  position-absolute top-50 start-50 translate-middle">
-                <h1 class="h1 fw-semibold " style="font-size: 3.5vw; ">Learn From The Root</h1>
-                <p style="font-size: 1.5vw;">Some representative placeholder content for the first slide.</p>
-                <div class="btn btn-info text-white">Get Started</div>
+            <div class="carousel-item position-relative" data-bs-interval="2000">
+              <img src="images/cover/cover-3.png"class="d-block w-100 overlay" alt="..."/>
+              <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+                <h1 class="h1 fw-semibold">Learn From The Root</h1>
+                <p>Some representative placeholder content for the first slide.</p>
+                <div class="btn btn-primary py-2 px-4 fw-semibold">Get Started</div>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <button class="carousel-control-prev"type="button"data-bs-target="#carouselExampleDark"data-bs-slide="prev">
+            <span
+              class="carousel-control-prev-icon d-none d-sm-block"
+              aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon d-none d-sm-block"
+              aria-hidden="true"
+            ></span>
             <span class="visually-hidden">Next</span>
           </button>
-      </div>
-    </section>
+        </div>
+      </section>
       <!-- Headere slider ends  -->
     </header>
     <!-- Header section ends -->
     <main>
       <!-- Course sections starts -->
-      <section class="container" style="margin: 6% auto; ">
-        <div class="text-center" style="margin-bottom: 5%;">
-          <h2 class="h2" >Discover Our Popular Courses</h2>
-          <p class="text-black">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>              
+      <section class="container" style="margin: 6% auto">
+        <div class="text-center course-heading" style="margin-bottom: 5%">
+          <h2 class="h2">
+            Discover Our Popular Courses
+          </h2>
+          <p class="text-black">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
         </div>
         <div class="row mt-3 h-100">
-          <div class=" col-auto col-md-12 col-lg-6">
+          <div class="col-auto col-md-12 col-lg-6">
             <!-- course card 1 -->
             <div class="card mb-3">
-              <div class="row m-auto g-0">
-                <div class=" col-auto col-sm-4">
-                  <img src="images/course/course-1.png" class="img-fluid rounded-start w" alt="...">
+              <div class="row g-0">
+                <div class="col-sm-4">
+                  <img
+                    src="images/course/course-1.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
-                <div class=" col-12 col-sm-8">
-                  <div class="card-body">
+                <div class="col-sm-8">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -140,45 +195,75 @@
             <div class="card mb-3 bg-light">
               <div class="row g-0">
                 <div class="col-sm-4">
-                  <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                  <img
+                    src="images/course/course-2.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
                 <div class="col-sm-8">
-                  <div class="card-body">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
-              </div> 
+              </div>
             </div>
             <!-- course card 3 -->
             <div class="card mb-3 bg-light">
               <div class="row g-0">
                 <div class="col-sm-4">
-                  <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                  <img
+                    src="images/course/course-3.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
                 <div class="col-sm-8">
-                  <div class="card-body">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
-           </div>
+            </div>
           </div>
           <!-- course card 4 -->
           <div class="col-md-12 d-none d-lg-block col-lg-6">
             <div class="card mb-3 bg-light">
               <div class="row g-0">
                 <div class="col-sm-4">
-                  <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                  <img
+                    src="images/course/course-4.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
                 <div class="col-sm-8">
-                  <div class="card-body">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -187,13 +272,23 @@
             <div class="card mb-3 bg-light">
               <div class="row g-0">
                 <div class="col-sm-4">
-                  <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                  <img
+                    src="images/course/course-5.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
                 <div class="col-sm-8">
-                  <div class="card-body">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -202,19 +297,34 @@
             <div class="card mb-3 bg-light">
               <div class="row g-0">
                 <div class="col-sm-4">
-                  <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                  <img
+                    src="images/course/course-6.png"
+                    class="img-fluid rounded-start w-100"
+                    alt="..."
+                  />
                 </div>
                 <div class="col-sm-8">
-                  <div class="card-body">
+                  <div class="card-body my-5 my-sm-0">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
-           </div>
-          </div>  
-        </div>  
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-4">
+          <button class="btn btn-lg btn-primary py-2 px-4 text-white fw-bold">
+            See More Courses
+          </button>
+        </div>
       </section>
       <!-- Course sections ends -->
     </main>
