company informations section added

--- a/index.html
+++ b/index.html
@@ -327,6 +327,38 @@
         </div>
       </section>
       <!-- Course sections ends -->
+
+      <!-- Company informations starts -->
+      <section class="container">
+        <div class="row" style="background-color: #F4FAFD;">
+          <div class="col-12 col-md-6">
+            <img src="images/working.png" alt="" class="img-fluid w-100 h-100">
+          </div>
+          <div class="col-12 col-md-6 ">
+            <div class="h-100 p-4 d-flex flex-column align-items-start justify-content-center">
+              <h2 class="h2">Explore The elearning Institute</h2>
+              <p class="text-black">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure. <br><br>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+              <div class="row w-50">
+                <div class="col">
+                  <h3 class="h3 fw-bold">3.2K+</h3>
+                  <p class="text-muted">Online Course</p>
+                </div>
+                <div class="col">
+                  <h3 class="h3 fw-bold">600+</h3>
+                  <p class="text-muted">Expert member</p>
+                </div>
+                <div class="col">
+                  <h3 class="h3 fw-bold">1k+</h3>
+                  <p class="text-muted">Rating & Review</p>
+                </div>
+              </div>
+              <button class="btn btn-primary">Read more</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Company informations ends -->
+
     </main>
 
     <!-- Bootstrap javascript cdn link -->
