--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- Font Awesome icons -->
+    <script src="https://kit.fontawesome.com/5d5e481088.js" crossorigin="anonymous"></script>
+
     <!-- Custom Css -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -599,12 +602,42 @@
           </div>
         </div>
       </section>
-
       <!-- Frequently asked questions ends -->
 
+      <!-- Company section starts -->
+      <section class="container d-none d-lg-block">
+        <div class=" text-center py-3">
+          <h2 class="h2 text-black fw-bold">Trusted by over 800+ companies</h2>
+        </div>
+        <div class="row my-3 d-flex align-items-center justify-content-between">
+          <div class="col"><img src="images/company/company-1.png" alt=""></div>
+          <div class="col"><img src="images/company/company-2.png" alt=""></div>
+          <div class="col"><img src="images/company/company-3.png" alt=""></div>
+          <div class="col"><img src="images/company/company-4.png" alt=""></div>
+          <div class="col"><img src="images/company/company-5.png" alt=""></div>
+          <div class="col"><img src="images/company/company-6.png" alt=""></div>
+        </div>
+      </section>
+      <!-- Company section ends -->
     </main>
 
-
+     <!-- Footer starts -->
+      <footer class="container-fluid">
+        <div class="row bg-black py-5">
+          <div class="col-8 col-md-6 mx-auto d-flex flex-column align-items-center justify-content-center ">
+            <h3 class="h3 text-white">Creative Tech</h2>
+            <p class="text-muted">Office 41, Zawaya Buildin, Ghala Muscat, <br> Sultanate of Oman</p>
+            <p class="text-muted">Privacy Ploicy  |   Terms of use</p>
+            <div class="d-flex justify-content-center">
+              <span class="me-3"><i class="fa-brands fa-facebook"></i></span> 
+              <span class="me-3"><i class="fa-brands fa-instagram"></i></span>
+              <span class="me-3"><i class="fa-brands fa-linkedin"></i></span>
+              <span class="me-3"><i class="fa-brands fa-github"></i></span>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- Footer ends -->
 
     <!-- Bootstrap javascript cdn link -->
     <script
