some styles added

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info"h4>Price : 20$</small>
                     </p>
                   </div>
                 </div>
@@ -249,14 +249,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Fullstack Web Development</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info"h4>Price : 20$</small>
                     </p>
                   </div>
                 </div>
@@ -274,14 +274,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Photography Basic Rules</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info"h4>Price : 20$</small>
                     </p>
                   </div>
                 </div>
@@ -301,14 +301,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Javascript Basic to advanced</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info"h4>Price : 20$</small>
                     </p>
                   </div>
                 </div>
@@ -326,14 +326,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Digital Marketing</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info"h4>Price : 20$</small>
                     </p>
                   </div>
                 </div>
@@ -351,14 +351,14 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="card-body my-5 my-sm-0">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Motion Graphics</h5>
                     <p class="card-text">
                       This is a wider card with supporting text below as a
                       natural lead-in to additional content. This content is a
                       little bit longer.
                     </p>
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="fw-bold text-info h4">Price : 20$</small>
                     </p>
                   </div>
                 </div>
