slider subtitle added

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               >
                 <h1 class="h1 fw-semibold">Get Started Digital Learning</h1>
                 <p>
-                  Some representative placeholder content for the first slide.
+                  Digital learning" is a learning method based on the use of new digital tools to enable learners to learn in a different way, whether it be face-to-face, distance learning.
                 </p>
                 <div class="btn btn-primary py-2 px-4 text-white fw-semibold">
                   Get Started
@@ -141,8 +141,7 @@
                 <div>
                   <h1 class="h1 fw-semibold">Discover Our Latest Courses</h1>
                   <p>
-                    Some representative placeholder content for the first slide.
-                  </p>
+ Digital learning" is a learning method based on the use of new digital tools to enable learners to learn in a different way, whether it be face-to-face, distance learning.                  </p>
                   <div class="btn btn-primary py-2 px-4 text-white fw-semibold">
                     Get Started
                   </div>
@@ -163,8 +162,7 @@
               >
                 <h1 class="h1 fw-semibold">Learn From The Root</h1>
                 <p>
-                  Some representative placeholder content for the first slide.
-                </p>
+ Digital learning" is a learning method based on the use of new digital tools to enable learners to learn in a different way, whether it be face-to-face, distance learning.                </p>
                 <div class="btn btn-primary py-2 px-4 fw-semibold">
                   Get Started
                 </div>
